start exporting the authorisation via Rest Clean up the rest API to be rest like