@@ -21,13 +21,15 @@ package io.mapsmessaging.rest.api.impl.integration;
 
 import io.mapsmessaging.MessageDaemon;
 import io.mapsmessaging.configuration.ConfigurationProperties;
-import io.mapsmessaging.dto.helpers.EndPointHelper;
 import io.mapsmessaging.dto.helpers.IntegrationInfoHelper;
-import io.mapsmessaging.dto.rest.endpoint.EndPointSummaryDTO;
 import io.mapsmessaging.dto.rest.integration.IntegrationInfoDTO;
+import io.mapsmessaging.dto.rest.integration.IntegrationStatusDTO;
+import io.mapsmessaging.network.NetworkConnectionManager;
 import io.mapsmessaging.network.io.connection.EndPointConnection;
+import io.mapsmessaging.rest.api.impl.interfaces.RequestedAction;
 import io.mapsmessaging.rest.cache.CacheKey;
 import io.mapsmessaging.rest.responses.IntegrationDetailResponse;
+import io.mapsmessaging.rest.responses.IntegrationListStatus;
 import io.mapsmessaging.rest.responses.StatusResponse;
 import io.mapsmessaging.selector.ParseException;
 import io.mapsmessaging.selector.SelectorParser;
@@ -36,11 +38,13 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.parameters.RequestBody;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.servlet.http.HttpServletResponse;
 import jakarta.ws.rs.*;
+import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.MediaType;
-import jakarta.ws.rs.core.Response;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -48,11 +52,10 @@ import java.util.stream.Collectors;
 import static io.mapsmessaging.rest.api.Constants.URI_PATH;
 
 @Tag(name = "Server Integration Management")
-@Path(URI_PATH)
+@Path(URI_PATH+"/server/integrations")
 public class IntegrationManagementApi extends IntegrationBaseRestApi {
 
   @GET
-  @Path("/server/integration")
   @Produces({MediaType.APPLICATION_JSON})
   @Operation(
       summary = "Get all inter-server connections",
@@ -93,301 +96,119 @@ public class IntegrationManagementApi extends IntegrationBaseRestApi {
         endPointManagers.stream()
             .map(IntegrationInfoHelper::fromEndPointConnection)
             .filter(info -> parser == null || parser.evaluate(info))
-            .collect(Collectors.toList());
+            .toList();
     IntegrationDetailResponse res = new IntegrationDetailResponse(protocols, global);
     putToCache(key, res);
     return res;
   }
 
-  @PUT
-  @Path("/server/integration/stopAll")
+  @PATCH
+  @Consumes(MediaType.APPLICATION_JSON)
+  @Produces(MediaType.APPLICATION_JSON)
   @Operation(
-      summary = "Stop all inter-server connections",
-      description = "Stops all currently running inter-server connections. Requires authentication if enabled in the configuration.",
+      summary = "Manages all inter-server connections",
+      description = "Handles state for all inter-server connections",
+      requestBody = @RequestBody(
+          description = "Requested action to apply to all inter-server connections",
+          required = true,
+          content = @Content(
+              mediaType = "application/json",
+              schema = @Schema(implementation = RequestedAction.class)
+          )
+      ),
       responses = {
           @ApiResponse(
               responseCode = "200",
               description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
+              content = @Content(
+                  mediaType = "application/json",
+                  schema = @Schema(implementation = StatusResponse.class)
+              )
           ),
           @ApiResponse(responseCode = "400", description = "Bad request"),
           @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
           @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
       }
   )
-  public StatusResponse stopAllInterfaces() {
+  public StatusResponse handleIntegrationActionRequest(
+      RequestedAction requested,
+      @Parameter(hidden = true) @Context HttpServletResponse response
+  ) {
     hasAccess(RESOURCE);
-    MessageDaemon.getInstance().getSubSystemManager().getNetworkConnectionManager().stop();
-    return new StatusResponse("Success");
-  }
+    boolean processed = false;
+    if (requested != null && requested.getState() != null) {
+      NetworkConnectionManager networkConnectionManager =
+          MessageDaemon.getInstance()
+              .getSubSystemManager()
+              .getNetworkConnectionManager();
 
-  @PUT
-  @Path("/server/integration/startAll")
-  @Operation(
-      summary = "Start all inter-server connections",
-      description = "Starts all currently stopped inter-server connections. Requires authentication if enabled in the configuration.",
-      responses = {
-          @ApiResponse(
-              responseCode = "200",
-              description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
-          ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
+      if ("stopped".equalsIgnoreCase(requested.getState())) {
+        networkConnectionManager.stop();
+        processed = true;
+      } else if ("started".equalsIgnoreCase(requested.getState())) {
+        networkConnectionManager.start();
+        processed = true;
+      } else if ("paused".equalsIgnoreCase(requested.getState())) {
+        networkConnectionManager.pause();
+        processed = true;
+      } else if ("resumed".equalsIgnoreCase(requested.getState())) {
+        networkConnectionManager.resume();
+        processed = true;
       }
-  )
-  public StatusResponse startAllInterfaces() {
-    hasAccess(RESOURCE);
-    MessageDaemon.getInstance().getSubSystemManager().getNetworkConnectionManager().start();
-    return new StatusResponse("Success");
-  }
-
-  @PUT
-  @Path("/server/integration/pauseAll")
-  @Operation(
-      summary = "Pause all inter-server connections",
-      description = "Pauses all currently running inter-server connections. Requires authentication if enabled in the configuration.",
-      responses = {
-          @ApiResponse(
-              responseCode = "200",
-              description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
-          ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-      }
-  )
-  public StatusResponse pauseAllInterfaces() {
-    hasAccess(RESOURCE);
-    MessageDaemon.getInstance().getSubSystemManager().getNetworkConnectionManager().pause();
-    return new StatusResponse("Success");
-  }
-
-  @PUT
-  @Path("/server/integration/resumeAll")
-  @Operation(
-      summary = "Resume all inter-server connections",
-      description = "Resumes all currently paused inter-server connections. Requires authentication if enabled in the configuration.",
-      responses = {
-          @ApiResponse(
-              responseCode = "200",
-              description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
-          ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-      }
-  )
-  public StatusResponse resumeAllInterfaces() {
-    hasAccess(RESOURCE);
-    MessageDaemon.getInstance().getSubSystemManager().getNetworkConnectionManager().resume();
-    return new StatusResponse("Success");
+    }
+    if (processed) {
+      return new StatusResponse("Success");
+    }
+    response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
+    return new StatusResponse("Unknown action");
   }
 
 
   @GET
-  @Path("/server/integration/{name}")
+  @Path("/status")
   @Produces({MediaType.APPLICATION_JSON})
   @Operation(
-      summary = "Get integration by name",
-      description = "Retrieves the configuration on the inter-server integration connection. Requires authentication if enabled in the configuration.",
+      summary = "Get all inter-server status",
+      description = "Retrieve all current statuses for the inter-server. Requires authentication if enabled in the configuration.",
       responses = {
           @ApiResponse(
               responseCode = "200",
               description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = IntegrationInfoDTO.class))
+              content = @Content(mediaType = "application/json", schema = @Schema(implementation = IntegrationListStatus.class))
           ),
           @ApiResponse(responseCode = "400", description = "Bad request"),
           @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
           @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-          @ApiResponse(responseCode = "404", description = "Integration name was not found"),
       }
   )
-  public IntegrationInfoDTO getByNameIntegration(@PathParam("name") String name) {
+  public IntegrationListStatus getAllIntegrationStatus(
+      @Parameter(
+          description = "Optional filter string ",
+          schema = @Schema(type = "String", example = "state = PAUSED")
+      )
+      @QueryParam("filter") String filter
+  ) throws ParseException {
     hasAccess(RESOURCE);
-    CacheKey key = new CacheKey(uriInfo.getPath(), name);
-    IntegrationInfoDTO cachedResponse = getFromCache(key, IntegrationInfoDTO.class);
+    CacheKey key = new CacheKey(uriInfo.getPath(), (filter != null && !filter.isEmpty()) ? "" + filter.hashCode() : "");
+    IntegrationListStatus cachedResponse = getFromCache(key, IntegrationListStatus.class);
     if (cachedResponse != null) {
       return cachedResponse;
     }
 
     // Fetch and cache response
-    EndPointConnection endPointConnection = locateInstance(name);
-    if (endPointConnection == null) {
-      throw new WebApplicationException("Integration not found", Response.Status.NOT_FOUND);
-    }
-
-    IntegrationInfoDTO response = IntegrationInfoHelper.fromEndPointConnection(endPointConnection);
-    putToCache(key, response);
-    return response;
-  }
-
-  @GET
-  @Path("/server/integration/{name}/connection")
-  @Produces({MediaType.APPLICATION_JSON})
-  @Operation(
-      summary = "Get integration status by name",
-      description = "Retrieves the current status on the inter-server integration connection. Requires authentication if enabled in the configuration.",
-      responses = {
-          @ApiResponse(
-              responseCode = "200",
-              description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = EndPointSummaryDTO.class))
-          ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-          @ApiResponse(responseCode = "404", description = "Integration name was not found")
-      }
-  )
-  public EndPointSummaryDTO getIntegrationConnection(@PathParam("name") String name) {
-    hasAccess(RESOURCE);
-    CacheKey key = new CacheKey(uriInfo.getPath(), name);
-    EndPointSummaryDTO cachedResponse = getFromCache(key, EndPointSummaryDTO.class);
-    if (cachedResponse != null) {
-      return cachedResponse;
-    }
-    EndPointConnection endPointConnection = locateInstance(name);
-    if (endPointConnection == null) {
-      throw new WebApplicationException("Integration not found", Response.Status.NOT_FOUND);
-    }
-
-    EndPointSummaryDTO response =
-        (endPointConnection.getEndPoint() != null)
-            ? EndPointHelper.buildSummaryDTO(name, endPointConnection.getEndPoint())
-            : new EndPointSummaryDTO();
-
-    putToCache(key, response);
-    return response;
-  }
-
-  @PUT
-  @Path("/server/integration/{name}/stop")
-  @Operation(
-      summary = "Stop integration by name",
-      description = "Stops the inter-server connection specified by the name, if started else nothing changes. Requires authentication if enabled in the configuration.",
-      responses = {
-          @ApiResponse(
-              responseCode = "200",
-              description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
-          ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-          @ApiResponse(responseCode = "404", description = "Integration name was not found")
-
-      }
-  )
-  public StatusResponse stopIntegration(@PathParam("name") String name) {
-    hasAccess(RESOURCE);
-    EndPointConnection endPointConnection = locateInstance(name);
-    if (endPointConnection == null) {
-      response.setStatus(404);
-      return null;
-    }
-    endPointConnection.stop();
-    return new StatusResponse("Success");
-  }
-
-  @PUT
-  @Path("/server/integration/{name}/start")
-  @Operation(
-      summary = "Start integration by name",
-      description = "Starts the inter-server connection specified by the name, if stopped else nothing changes. Requires authentication if enabled in the configuration.",
-      responses = {
-          @ApiResponse(
-              responseCode = "200",
-              description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
-          ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-          @ApiResponse(responseCode = "404", description = "Integration name was not found")
-      }
-  )
-  public StatusResponse startIntegration(@PathParam("name") String name) {
-    hasAccess(RESOURCE);
-    EndPointConnection endPointConnection = locateInstance(name);
-    if (endPointConnection == null) {
-      response.setStatus(404);
-      return null;
-    }
-    endPointConnection.start();
-    return new StatusResponse("Success");
-  }
-
-  @PUT
-  @Path("/server/integration/{name}/resume")
-  @Operation(
-      summary = "Resume integration by name",
-      description = "Resumes the inter-server connection specified by the name, if paused else nothing changes. Requires authentication if enabled in the configuration.",
-      responses = {
-          @ApiResponse(
-              responseCode = "200",
-              description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
-          ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-          @ApiResponse(responseCode = "404", description = "Integration name was not found")
-      }
-  )
-  public StatusResponse resumeIntegration(@PathParam("name") String name) {
-    hasAccess(RESOURCE);
-    EndPointConnection endPointConnection = locateInstance(name);
-    if (endPointConnection == null) {
-      response.setStatus(404);
-      return null;
-    }
-    endPointConnection.resume();
-    return new StatusResponse("Success");
-  }
-
-  @PUT
-  @Path("/server/integration/{name}/pause")
-  @Operation(
-      summary = "Pause integration by name",
-      description = "Pauses the inter-server connection specified by the name, if started else nothing changes. Requires authentication if enabled in the configuration.",
-      responses = {
-          @ApiResponse(
-              responseCode = "200",
-              description = "Operation was successful",
-              content = @Content(mediaType = "application/json", schema = @Schema(implementation = StatusResponse.class))
-          ),
-          @ApiResponse(responseCode = "400", description = "Bad request"),
-          @ApiResponse(responseCode = "401", description = "Invalid credentials or unauthorized access"),
-          @ApiResponse(responseCode = "403", description = "User is not authorised to access the resource"),
-          @ApiResponse(responseCode = "404", description = "Integration name was not found")
-      }
-  )
-  public StatusResponse pauseIntegration(@PathParam("name") String name) {
-    hasAccess(RESOURCE);
-    EndPointConnection endPointConnection = locateInstance(name);
-    if (endPointConnection == null) {
-      response.setStatus(404);
-      return null;
-    }
-    endPointConnection.pause();
-    return new StatusResponse("Success");
-  }
-
-  private EndPointConnection locateInstance(String name) {
-    List<EndPointConnection> list =
+    ParserExecutor parser = (filter != null && !filter.isEmpty()) ? SelectorParser.compile(filter) : null;
+    List<IntegrationStatusDTO> response =
         MessageDaemon.getInstance()
             .getSubSystemManager()
             .getNetworkConnectionManager()
-            .getEndPointConnectionList();
-    for (EndPointConnection endPointConnection : list) {
-      if (endPointConnection.getConfigName().equalsIgnoreCase(name)) {
-        return endPointConnection;
-      }
-    }
-    return null;
+            .getEndPointConnectionList()
+            .stream()
+            .map(this::fromConnection)
+            .filter(status -> parser == null || parser.evaluate(status))
+            .collect(Collectors.toList());
+
+    IntegrationListStatus status = new IntegrationListStatus(response);
+    putToCache(key, status);
+    return status;
   }
 }
